testsuite/tests/typecheck/should_fail/tcfail092.hs
{-# LANGUAGE ParallelListComp #-}

-- !!! Illegal conflicting parallel bindings

module ShouldFail where

xys = [ () | let a = 13 | let a = 17 ]
